--- a/css/jquery.cslider.css
+++ b/css/jquery.cslider.css
@@ -5,7 +5,7 @@
     position: relative;
     margin:0 auto;
     overflow: hidden;
-    background: transparent url(../images/Slider.png) repeat-x 0% center; /* Replace with your background image*/
+    //background: transparent url(../images/Slider.png) repeat-x 0% center; /* Replace with your background image*/
     background-size:auto 100%;
     -webkit-transition: background-position 1s ease-out 0.3s;
     -moz-transition: background-position 1s ease-out 0.3s;
@@ -26,7 +26,7 @@
     left:0;
     width:100%;
     height:100%;
-    background: #22A5BA;//background: #FECE1A;
+    background: #fff;//background: #FECE1A;
     opacity:0.85;
     filter: alpha(opacity=85);
 }
@@ -133,7 +133,7 @@
     width:50px;
     height:3px;
     margin:0 5px 0 0;
-    background:#fff;
+    background:#0378AA;
     cursor: pointer;
     position: relative;
 }
