before add lazy load testing 2

--- a/css/animate.css
+++ b/css/animate.css
@@ -698,12 +698,74 @@
 	-o-animation-name: fadeInUp;
 	animation-name: fadeInUp;
 }
-@-webkit-keyframes fadeInDown {
+@-webkit-keyframes fadeInDown__ {
 	0% {
 		opacity: 0;
 		-webkit-transform: translateY(-20px);
 	}
-	
+
+	100% {
+		opacity: 1;
+		-webkit-transform: translateY(0);
+	}
+}
+
+@-moz-keyframes fadeInDown__ {
+	0% {
+		opacity: 0;
+		-moz-transform: translateY(-20px);
+	}
+
+	100% {
+		opacity: 1;
+		-moz-transform: translateY(0);
+	}
+}
+
+@-o-keyframes fadeInDown__ {
+	0% {
+		opacity: 0;
+		-o-transform: translateY(-20px);
+	}
+
+	100% {
+		opacity: 1;
+		-o-transform: translateY(0);
+	}
+}
+
+@keyframes fadeInDown__ {
+	0% {
+		opacity: 0;
+		transform: translateY(-20px);
+	}
+
+	100% {
+		opacity: 1;
+		transform: translateY(0);
+	}
+}
+.fadeInDown {
+	-webkit-animation-name: fadeInDown__;
+	-moz-animation-name: fadeInDown__;
+	-o-animation-name: fadeInDown__;
+	animation-name: fadeInDown__;
+}
+
+
+@-webkit-keyframes fadeInDown {
+	0% {
+		opacity: 0.3;
+		-webkit-transform: translateY(-50px);
+	}
+
+	50%{
+		opacity: 0.5;
+		-webkit-transform: translateY(200);}
+	75%{
+		opacity: 0.7;
+		-webkit-transform: translateY(100);}
+
 	100% {
 		opacity: 1;
 		-webkit-transform: translateY(0);
@@ -712,10 +774,16 @@
 
 @-moz-keyframes fadeInDown {
 	0% {
-		opacity: 0;
-		-moz-transform: translateY(-20px);
+		opacity: 0.3;
+		-moz-transform: translateY(-50px);
 	}
-	
+
+	50%{
+		opacity: 0.5;
+		-moz-transform: translateY(200);}
+	75%{
+		opacity: 0.7;
+		-moz-transform: translateY(100);}
 	100% {
 		opacity: 1;
 		-moz-transform: translateY(0);
@@ -724,10 +792,15 @@
 
 @-o-keyframes fadeInDown {
 	0% {
-		opacity: 0;
-		-o-transform: translateY(-20px);
+		opacity: 0.3;
+		-o-transform: translateY(-50px);
 	}
-	
+	50%{
+		opacity: 0.5;
+		-o-transform: translateY(200);}
+	75%{
+		opacity: 0.7;
+		-o-transform: translateY(100);}
 	100% {
 		opacity: 1;
 		-o-transform: translateY(0);
@@ -736,15 +809,22 @@
 
 @keyframes fadeInDown {
 	0% {
-		opacity: 0;
-		transform: translateY(-20px);
+		opacity: 0.3;
+		transform: translateY(-50px);
 	}
-	
+	50%{
+		opacity: 0.5;
+		transform: translateY(200);}
+	75%{
+		opacity: 0.7;
+		transform: translateY(100);}
+
 	100% {
 		opacity: 1;
 		transform: translateY(0);
 	}
 }
+
 
 .fadeInDown {
 	-webkit-animation-name: fadeInDown;
@@ -752,6 +832,13 @@
 	-o-animation-name: fadeInDown;
 	animation-name: fadeInDown;
 }
+
+
+
+
+
+
+
 @-webkit-keyframes fadeInLeft {
 	0% {
 		opacity: 0;
