--- a/css/style.css
+++ b/css/style.css
@@ -461,6 +461,10 @@ p {
     padding-bottom: 0px;
     background: #181A1C url(../images/brand-bg.png) no-repeat center;
     border-top:0px solid #FECE1A;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 .third-section .container {
     padding:20px;
@@ -486,8 +490,8 @@ p {
     padding-top:15px;
 }
 .service p {
-    padding:0px 50px;
-    height:60px;
+    padding:0px 50px;text-align: justify;
+    //height:60px;
 }
 .service img {
     width:150px;
@@ -515,7 +519,7 @@ p {
 
  .single-project {
     margin-bottom:30px;
-    background:#181A1C;
+    background:rgb(11, 43, 84);
 }
 .single-project img {
     width:100%;
@@ -1691,8 +1695,27 @@ ul.top-soc-small li a.soc-skype:hover{color:#fff;background-color: #00AFF0;}
 .price-table .price-column:nth-child(4) h3{background-color: #42C0F3}
 
 
-.tp-small{color:#fff;text-decoration: none;}
+.tp-small{color:#fff;text-decoration: none;font-weight: bold;}
 .tp-small:hover{color:#fff;text-decoration: none;}
+
+
+
+@media (min-width: 1200px)
+{
+.service{height:350px;}
+}
+
+@media (min-width: 980px) and (max-width: 1199px)
+{
+
+    .service{height:400px;}
+}
+
+@media (min-width: 768px) and (max-width: 979px)
+{
+
+    .service{height:500px;}
+}
 
 @media (max-width: 1200px)
 {
@@ -1718,13 +1741,21 @@ ul.top-soc-small li a.soc-skype:hover{color:#fff;background-color: #00AFF0;}
     .da-arrows span{zoom: 0.5}
     .da-dots span {zoom: 0.5}
     .da-dots{bottom: 10px;}
+    #second-place{margin-top:20px}
+    .section#portfolio .container #single-project{padding-left: 20px;padding-right: 20px;}
+
 }
 
 
 @media (max-width: 979px)
 {
+    .map-canvas {position: static;}
+    .map-wrapper {height: auto}
+    .contact-form{width: 100% !important;}
+
+
+
     .section#portfolio .container ul.nav-pills,
-    .section#portfolio .container #single-project,
     .section#price .container .price-table-parent,
     .locations{
         padding-left: 20px;
@@ -1736,7 +1767,7 @@ ul.top-soc-small li a.soc-skype:hover{color:#fff;background-color: #00AFF0;}
         padding: 30px 20px;
 
     }
-    #second-place{margin-top:20px}
+
 
    .container .price-table{padding-left: 0px !important;padding-right: 0px !important;}
 }
@@ -1754,3 +1785,87 @@ ul.top-soc-small li a.soc-skype:hover{color:#fff;background-color: #00AFF0;}
         font-size : 18px;
     }
 }
+
+
+
+
+#name,#phone,#email,#comment{color:rgb(6, 59, 128);font-family: 'Lato', sans-serif;font-size: 16px;
+    border: 1px solid #071B6D;
+}
+
+#comment{resize: none}
+
+
+/* Safari, Chrome and Opera */
+#name::-webkit-input-placeholder,
+#phone::-webkit-input-placeholder,
+#email::-webkit-input-placeholder,
+#comment::-webkit-input-placeholder {
+    color: rgba(55, 136, 171, 0.92);font-family: 'Lato', sans-serif;font-size: 14px;;
+}
+
+
+/* Firefox 18- */
+#name:-moz-placeholder,
+#phone:-moz-placeholder,
+#email:-moz-placeholder,
+#comment:-moz-placeholder {
+    color: rgba(55, 136, 171, 0.92);font-family: 'Lato', sans-serif;font-size: 14px;
+}
+
+#name::-moz-placeholder,
+#phone::-moz-placeholder,
+#email::-moz-placeholder,
+#comment::-moz-placeholder{ /* Firefox 19+ */
+    color: rgba(55, 136, 171, 0.92);font-family: 'Lato', sans-serif;font-size: 14px;
+}
+
+
+
+/* IE 10+ */
+#name:-ms-input-placeholder,
+#phone:-ms-input-placeholder,
+#email:-ms-input-placeholder,
+#comment:-ms-input-placeholder {
+    color: rgba(55, 136, 171, 0.92);font-family: 'Lato', sans-serif;font-size: 14px;
+}
+
+
+/* Edge */
+#name::-ms-input-placeholder,
+#phone::-ms-input-placeholder,
+#email::-ms-input-placeholder,
+#comment::-ms-input-placeholder{
+    color: rgba(55, 136, 171, 0.92);font-family: 'Lato', sans-serif;font-size: 14px;
+}
+
+
+/* Standard one last! */
+#name:placeholder-shown,
+#phone:placeholder-shown,
+#email:placeholder-shown,
+#comment:placeholder-shown {
+    color: rgba(55, 136, 171, 0.92);font-family: 'Lato', sans-serif;font-size: 14px;
+}
+
+.message-btn {color:rgb(6, 59, 128);border:1px solid rgb(6, 59, 128)}
+.error{font-size: 14px;}
+
+.thumbnail > img {width: 100%;}
+.gotowebsite,.gotowebsite:focus{color:#fff;font-weight: bold;text-decoration: none;}
+.gotowebsite:hover{color:#2bb8c9;}
+
+/**/
+.project-info ,.project-description p{
+    font-weight: bold;
+}
+
+.project-info span, .project-title h3{color: #0DC0D0;}
+.project-title {border-bottom: 1px solid #0DC0D0;}
+.project-title .close{opacity: 0.5;color: #0CC0D0;}
+.project-title .close:hover {opacity: 1}
+
+.project-info div a,.project-info div a:focus{color:#fff;text-decoration: none;}
+.project-info div a:hover{color:#0DC0D0;text-decoration: none;}
+.top-address{font-weight: bold;}
+ul#top-navigation li a{font-weight: bold;}
